package com.example.mvvm_note_app.core.util

object Constant {
    const val NOTE_DATABASE = "note_database"
    const val ORDER_SECTION = "ORDER_SECTION"
    const val TITLE_TEXT_FIELD = "TITLE_TEXT_FIELD"
    const val CONTENT_TEXT_FIELD = "CONTENT_TEXT_FIELD"
    const val NOTE_ITEM= "NOTE_ITEM"
}