...
            FloatingActionButton(
                onClick = { navController.navigate(Routes.ADD_EDIT_NOTE_SCREEN)},
                Modifier.background(color = MaterialTheme.colorScheme.primary)
            ) {
                Icon(
                    imageVector = Icons.Default.Add,
                    contentDescription = "Add"
                )
            }
        },
        floatingActionButtonPosition = FabPosition.End
    ) {
        Column(
...
                    onClick = {
                        viewModel.onEvent(NoteListEvents.ToggleOrderSection)
                    }
                ) {
                    Icon(
                        imageVector = Icons.Default.MoreVert,
                        contentDescription = "Drop_down"
                    )
                }
            }
            AnimatedVisibility(
                visible = noteState.isOrderSectionVisible,
                enter = fadeIn() + slideInVertically(),
...
