...
                    viewModel.onEvent(AddEditNoteEvent.SaveNote)
                },
                Modifier.background(MaterialTheme.colorScheme.primary)
            ) {
                Icon(
                    imageVector = Icons.Default.Done,
                    contentDescription = "Save"
                )
            }
        }
    ) {
        Column(
            modifier = Modifier
...
